lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:30: error: ';' expected but ')' found.
  			setAngleDesire(-30))
                                           ^